hetzner/k8s/homepage/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra-homepage
  labels:
    app.kubernetes.io/managed-by: argocd
